<resources>
    <string name="app_name" translatable="false">Quizz\'Ditch</string>
    <string name="Nom_App" translatable="false">Quizz\'Ditch</string>
    <string name="img_logo" translatable="false">TODO</string>
    <string name="question1">2. Choose the potion you would most likely invent:</string>
    <string name="rep1_q1">Power Potion</string>
    <string name="question2">1. The Pipaillon plant produces flowers every 100 years that change their smell to attract a specific person. What scent should this plant emit to attract you?</string>
    <string name="rep2_q1">Love Potion</string>
    <string name="rep3_q1">Glory Potion</string>
    <string name="rep4_q1">Wisdom Potion</string>
    <string name="rep1_q2">The scent of Gringotts</string>
    <string name="rep2_q2">The scent of your home</string>
    <string name="rep3_q2">The scent of butterbeer</string>
    <string name="rep4_q2">The scent of a library</string>
    <string name="App_name" translatable="false">Quizz\'Ditch</string>
    <string name="user" translatable="false"><![CDATA[<User>]]></string>
    <string name="btn_back">Back</string>
    <string name="btn_next">Next</string>
    <string name="text_intro">Which house do you belong to?</string>
    <string name="btn_accueil">Start</string>
    <string name="pseudo" translatable="false">Pseudo</string>
    <string name="enter_your_pseudo">Enter your pseudo:</string>
    <string name="validate">Validate</string>
    <string name="q3">3. 4 boxes are in front of you. You can open one of them. Which one do you choose?</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="Text_congra">Congratulation</string>
    <string name="text_fin">You belong to :</string>
    <string name="rep_fin" translatable="false">rep</string>
    <string name="img4" translatable="false">TODO</string>
    <string name="img2" translatable="false">TODO</string>
    <string name="img3" translatable="false">TODO</string>
    <string name="img1" translatable="false">TODO</string>
    <string name="Q_4">4. You are in an enchanted garden. What attracts your attention?</string>
    <string name="q_a_r_1">The statue of a famous wizard</string>
    <string name="q_4_r_2">A magical beast passing through</string>
    <string name="q_4_r_3">A broom of quidditch</string>
    <string name="q_4_r_4">A rare plant</string>
    <string name="q_5">5. Hogwarts is burning, and there are four important things you need to save, but they’re in different places. Which one are you gonna save first?</string>
    <string name="text_spi" translatable="false">Select your answer</string>
    <string name="Q7">7. On a scale of 1 to 4 how important you think it is to be part of the quidditch team ?</string>
    <string name="Q6_R1">Spells and curses</string>
    <string name="Q6">6. What would you be most interested lo tearn in Hogwarts?</string>
    <string name="Q6_r2">Taming magical creatures</string>
    <string name="Q6_r3">The castle secrets</string>
    <string name="Q6_r4">All areas of magic</string>
    <string name="Q8">8. A Muggle confronts you and tells you that he knows you are a wizard. How do you react?</string>
    <string name="Q8_r1">Yes, and then you want me to turn you into a pig?</string>
    <string name="q8_r2">Why would you think such a thing?</string>
    <string name="q8_r3">Yes, I am a wizard *you walk away bluffing*.</string>
    <string name="q8_r4">Are you crazy?!</string>
    <string name="img_rep" translatable="false">TODO</string>
    <string name="share">SHARE</string>
    <string name="btn_restart">Restart</string>
</resources>
