<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    tools:context=".page_q5">

    <TextView
        android:id="@+id/text_quizzditch_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/aref_ruqaa"
        android:text="@string/App_name"
        android:textColor="#FEFEFE"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/text_q8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384" />

    <TextView
        android:id="@+id/text_q8"
        android:layout_width="359dp"
        android:layout_height="106dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/aref_ruqaa"
        android:text="@string/Q8"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="330dp"
        android:layout_height="245dp"
        android:layout_marginBottom="80dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_back_p5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent">

        <CheckBox
            android:id="@+id/checkBox_q_8_r_1"
            android:layout_width="282dp"
            android:layout_height="67dp"
            android:checked="false"
            android:fontFamily="@font/aref_ruqaa"
            android:text="@string/Q8_r1"
            android:textColor="#FEFEFE"
            android:textSize="16sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBox_q_8_r_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aref_ruqaa"
            android:text="@string/q8_r2"
            android:textColor="#FEFEFE"
            android:textSize="16sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBox_q_8_r_3"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:fontFamily="@font/aref_ruqaa"
            android:text="@string/q8_r3"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBox_q_8_r_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aref_ruqaa"
            android:text="@string/q8_r4"
            android:textColor="#FEFEFE"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_back_p5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="80dp"
        android:fontFamily="@font/aref_ruqaa"
        android:text="@string/btn_back"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_next_p5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/aref_ruqaa"
        android:text="@string/btn_next"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn_back_p5"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>