<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#020202"
    tools:context=".Page_Q1">

    <TextView
        android:id="@+id/text_user_q1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="272dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/aref_ruqaa"
        android:text="@string/user"
        android:textColor="#FEFEFE"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/text_q1"
        app:layout_constraintEnd_toStartOf="@+id/text_quizzditch_q1" />

    <TextView
        android:id="@+id/text_quizzditch_q1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/aref_ruqaa"
        android:text="@string/App_name"
        android:textColor="#FEFEFE"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/text_q1"
        app:layout_constraintEnd_toEndOf="@+id/text_q1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/text_q1"
        android:layout_width="421dp"
        android:layout_height="36dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/aref_ruqaa"
        android:text="@string/question1"
        android:textAlignment="center"
        android:textColor="#FEFEFE"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="361dp"
        android:layout_height="156dp"
        android:layout_marginBottom="36dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_q1_r1"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aref_ruqaa"
                android:text="@string/rep1_q1"
                android:textStyle="bold" />

            <Space
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_q1_r2"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aref_ruqaa"
                android:text="@string/rep2_q1"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_q1_r3"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aref_ruqaa"
                android:text="@string/rep3_q1"
                android:textStyle="bold" />

            <Space
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_q1_r4"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aref_ruqaa"
                android:text="@string/rep4_q1"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="421dp"
        android:layout_height="110dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/aref_ruqaa"
        android:text="@string/question2"
        android:textAlignment="center"
        android:textColor="#FEFEFE"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="361dp"
        android:layout_height="159dp"
        android:layout_marginBottom="28dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent">

        <RadioGroup
            android:layout_width="361dp"
            android:layout_height="65dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton_q2_r1"
                android:layout_width="165dp"
                android:layout_height="54dp"
                android:fontFamily="@font/aref_ruqaa"
                android:text="@string/rep1_q2"
                android:textColor="#FEFEFE"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/radioButton_q2_r2"
                android:layout_width="165dp"
                android:layout_height="53dp"
                android:fontFamily="@font/aref_ruqaa"
                android:text="@string/rep2_q2"
                android:textColor="#FEFEFE"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <RadioGroup
            android:layout_width="361dp"
            android:layout_height="58dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton_q2_r3"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aref_ruqaa"
                android:text="@string/rep3_q2"
                android:textColor="#FEFEFE"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/radioButton_q2_r4"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aref_ruqaa"
                android:text="@string/rep4_q2"
                android:textColor="#FEFEFE"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="278dp"
        android:layout_height="61dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_back_q1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aref_ruqaa"
            android:onClick="action_end"
            android:text="@string/btn_back"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_next_q1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aref_ruqaa"
            android:text="@string/btn_next"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="#FEFEFE"
        android:foregroundTint="#FDFDFD"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.382" />

</androidx.constraintlayout.widget.ConstraintLayout>